fixed overflow on otherBody

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -25,7 +25,6 @@ body.menuOpen {
 	flex-direction: column;
 	flex: 1;
 	width: 100%;
-	overflow-y: auto;
 	min-height: 100vh;
 	margin: 0 1.5rem;
 }
